--- a/Activities/Week_09/makefile
+++ b/Activities/Week_09/makefile
@@ -1,14 +1,14 @@
 contigua:
 	gcc -c fila_contigua.c
 	gcc main.c fila_contigua.o -o main
-	main
+	./main
 
 encadeada:
 	gcc -c fila_encadeada.c
 	gcc main.c fila_encadeada.o -o main
-	main
+	./main
 
 clean:
 	rm *.o	
-	rm main.exe
+	rm main
 	
